--- a/main.tex
+++ b/main.tex
@@ -36,6 +36,7 @@
   \input{lectures/lec-10.tex}
   \input{lectures/lec-11.tex}
   \input{lectures/lec-12.tex}
+  \input{lectures/lec-13.tex}
   % end lectures
 
   \listnotes
