--- a/preamble.tex
+++ b/preamble.tex
@@ -47,7 +47,7 @@
 \DeclarePairedDelimiter\ket{\lvert}{\rangle}
 \DeclarePairedDelimiterX\braket[2]{\langle}{\rangle}{#1 \delimsize\vert #2}
 
-\usetikzlibrary{automata,positioning,shapes.misc}
+\usetikzlibrary{automata,positioning,shapes.misc,quantikz}
 \tikzset{
   vlak/.style={fill=lightgray!80,draw=none,opacity=1},
   obj/.style={fill=lightgray,draw=none},
