--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,7 @@
   \input{lectures/lec-11.tex}
   \input{lectures/lec-12.tex}
   \input{lectures/lec-13.tex}
+  \input{lectures/lec-14.tex}
   % end lectures
 
   \listnotes
