--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,7 @@
   \input{lectures/lec-12.tex}
   \input{lectures/lec-13.tex}
   \input{lectures/lec-14.tex}
+  \input{lectures/lec-15.tex}
   % end lectures
 
   \listnotes
